Updates and code refactorings